Closed Bug 1848254 Opened 9 months ago Closed 9 months ago

Crash in [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator()]

Categories

(Core :: Audio/Video: Playback, defect)

All
Linux
defect

Tracking

()

RESOLVED FIXED
118 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox116 --- unaffected
firefox117 --- unaffected
firefox118 + fixed

People

(Reporter: mccr8, Assigned: padenot)

References

(Regression)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/1858e784-8a0c-45ce-bf0d-97aae0230809

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0  ?  @0x00000000  
1  libxul.so  mozilla::MediaDataDecoderProxy::Init const  dom/media/platforms/wrappers/MediaDataDecoderProxy.cpp:18
1  libxul.so  mozilla::detail::ProxyFunctionRunnable<mozilla::MediaDataDecoderProxy::Init  xpcom/threads/MozPromise.h:1690
2  libxul.so  mozilla::TaskQueue::Runner::Run  xpcom/threads/TaskQueue.cpp:257
3  libxul.so  nsThreadPool::Run  xpcom/threads/nsThreadPool.cpp:343
4  libxul.so  nsThread::ProcessNextEvent  xpcom/threads/nsThread.cpp:1193
5  libxul.so  NS_ProcessNextEvent  xpcom/threads/nsThreadUtils.cpp:480
5  libxul.so  mozilla::ipc::MessagePumpForNonMainThreads::Run  ipc/glue/MessagePump.cpp:300
6  libxul.so  MessageLoop::RunInternal  ipc/chromium/src/base/message_loop.cc:370
6  libxul.so  MessageLoop::RunHandler  ipc/chromium/src/base/message_loop.cc:363

I don't know if this is a dupe of something else. It looks like a regression, with the first crashes on 20230808212319. Linux-only.

Here's the set of new patches in that build. Lots of media stuff.

Flags: needinfo?(padenot)
OS: Unspecified → Linux
Hardware: x86 → All
Assignee: nobody → padenot
Flags: needinfo?(padenot)

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 10 desktop browser crashes on nightly

For more information, please visit BugBot documentation.

Keywords: topcrash
Crash Signature: [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator()] → [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator()] [@0x0 | _pt_root]
Crash Signature: [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator()] [@0x0 | _pt_root] → [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator() ] [@0x0 | _pt_root ]
Crash Signature: [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator() ] [@0x0 | _pt_root ] → [@ @0x0 | mozilla::MediaDataDecoderProxy::Init::$::operator() ] [@ @0x0 | _pt_root ]
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3a98cafd4efc
Bug Bug 1848254 - Always fetch av_dict_set and av_dict_free pointers. r=media-playback-reviewers,karlt
Flags: needinfo?(padenot)
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7ca29f905db0
Bug Bug 1848254 - Always fetch av_dict_set and av_dict_free pointers. r=media-playback-reviewers,karlt
Status: NEW → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch
Flags: needinfo?(padenot)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: