Bug Bug 1848254 - Always fetch av_dict_set and av_dict_free pointers. r=media-playback-reviewers,karlt

Depends on D186005

Differential Revision: https://phabricator.services.mozilla.com/D186008